# rinha-backend-Q12024

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  submission-docker-compose.yaml
database/: init.sh  postgresql.Dockerfile
src/: handlers.rs  main.rs  older_stuff.rs  queries.rs  setup.rs  types.rs
