[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
envconfig = { version = "0.10" }
serde_json = { version = "1.0" }
